Fix some deprecation warnings in formats-api component